Rename package json from question1_2_3 and question3

--- a/question3/package.json
+++ b/question3/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "question1_2",
+  "name": "question3",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "question3",
+  "author": "bladerangel10@gmail.com",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
