--- a/question1_2_3/package.json
+++ b/question1_2_3/package.json
@@ -1,8 +1,8 @@
 {
   "name": "question1_2_3",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "question1_2_3",
+  "author": "bladerangel10@gmail.com",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
